@@ -1,14 +1,24 @@
 package com.example.postparser.post;
 
+import com.example.postparser.post.configuration.PlaceholderConfiguration;
+import com.google.inject.Inject;
+
 import java.io.File;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class PostFileCreator {
-    static File getFile(Post post, String absolutePath, String fileLocalization) {
+    private final PlaceholderConfiguration config;
+
+    @Inject
+    public PostFileCreator(PlaceholderConfiguration config) {
+        this.config = config;
+    }
+
+    File getFile(Post post) {
         final String fileName = String.format("%s.json", post.id());
-        Path firstPart = Path.of(absolutePath);
-        Path secondPart = Paths.get(fileLocalization).resolve(fileName);
+        Path firstPart = Path.of(new File("").getAbsolutePath());
+        Path secondPart = Paths.get(config.getFileLocalization()).resolve(fileName);
         Path full = Path.of(firstPart.toString(), secondPart.toString());
 
         return new File(full.toUri());
